# qemu-cae

./: .gitignore  README.md  README.zh.md  configure  meson.build  meson_options.txt
accel/: Kconfig  meson.build
accel/cae/: Kconfig  cae-accel-ops-rr.c  cae-accel-ops.c  cae-accel-ops.h  cae-all.c  meson.build
accel/tcg/: cpu-exec.c  cputlb.c
cae/: checkpoint.c  cpu_model.c  engine.c  event.c  mem.c  meson.build  pipeline.c  trace-emit.c  uop.c
docs/cae/: m5-calibration-log.md  xs-stack-known-good.md
docs/devel/: cae.rst  index-cae.rst  index.rst
docs/plans/: cae-missing-benchmarks-plan.md
hw/: meson.build
hw/cae/: cache.c  cache_mshr.c  cpu_inorder.c  cpu_ooo.c  dram.c  meson.build
hw/cae/bpred/: 2bit_local.c  bpred.c  btb.c  btb.h  decoupled_bpu.c  meson.build  ras.c  ras.h  tage_sc_l.c  tournament.c
hw/cae/ooo/: iq.c  lsq.c  meson.build  rat.c  rob.c  sbuffer.c  scheduler.c  violation.c
include/cae/: bpred.h  cache_mshr.h  cae-mem-hook.h  checkpoint.h  cpu_model.h  cpu_ooo.h  engine.h  mem.h  ooo.h  pipeline.h  riscv-trace-derive.h  sbuffer.h  trace-emit.h  trace.h  uop.h
scripts/: meson-buildoptions.sh
tests/cae/: Makefile.target  README
tests/unit/: meson.build  test-cae.c
tools/cae/: build-xs-gem5-staged.sh  check-cae-arch-neutrality.sh  check-gem5-version.sh  check-nemu-version.sh  check-xiangshan-gem5-version.sh  gem5-version.txt  nemu-itrace.patch  nemu-version.txt  xiangshan-gem5-version.txt  xs-gem5-build.Dockerfile  xs-gem5-commit-drain-exit.patch  xs-gem5-microtage-blocksize.patch  xs-gem5-stuck-rob-empty-exit.patch
(+74 files in other folders)
